# borealis_gui

./: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
include/: main_gui.h
include/borealis_pages/borealis_map_and_drone/: borealis_map_and_drone.h
include/borealis_pages/borealis_smart_glove/: borealis_smart_glove.h  smart_glove_client.h
include/borealis_rviz/: config_dialog.h  rviz.h
include/image_frame/: image_interactive_layout.h  ratio_layouted_frame.h
include/interactive_rqt_rviz/: config_dialog.h  rviz.h
include/rqt_interactive_image_view/: duplicate_image_view.h  image_view.h  interactive_components.h  ratio_layouted_frame.h
resource/: .image_view.ui.swo  duplicate_image_view.ui  image_view.ui
scripts/: rqt_interactive_image_view
src/: main_gui.cpp
src/borealis_pages/borealis_map_and_drone/: borealis_map_and_drone.cpp
src/borealis_pages/borealis_smart_glove/: borealis_smart_glove.cpp  smart_glove_client.cpp
src/borealis_rviz/: config_dialog.cpp  rviz.cpp
src/image_frame/: image_interactive_layout.cpp  ratio_layouted_frame.cpp
src/interactive_rqt_rviz/: config_dialog.cpp  rviz.cpp
src/rqt_interactive_image_view/: duplicate_image_view.cpp  image_view.cpp  interactive_components.cpp  ratio_layouted_frame.cpp
