<package>
  <name>rqt_interactive_image_view</name>
  <version>0.4.16</version>
  <description>rqt_interactive_image_view provides a GUI plugin for displaying and interacting with images using image_transport.</description>
  <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>

  <license>BSD</license>

  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rviz</run_depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
